# EncodEval

./: .gitignore  main.py  overview.md  pyproject.toml  slurm_main.slurm
configs/sequence_classification_tasks/: norec_nb_test-batch.yaml  norec_nb_test-lr.yaml  norec_nb_test.yaml
configs/token_classification_tasks/: norne-nb-test.yaml
encodeval/: datasets.py
encodeval/eval_tasks/: abstract_eval.py  sequence_classification_eval.py  token_classification_eval.py
results/main/base_50k/SC_noReC/: results.json
